--- a/src/DevTKSS.Extensions.OAuth/DevTKSS.Extensions.OAuth.csproj
+++ b/src/DevTKSS.Extensions.OAuth/DevTKSS.Extensions.OAuth.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+    <PackageReference Include="FluentValidation" />
   </ItemGroup>
 
 </Project>
