--- a/src/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -5,7 +5,7 @@
   },
   "EtsyOAuth": {
     "LoginStartUri": "https://www.etsy.com/oauth/connect",
-    "LoginCallbackUri": "https://localhost:5001/etsy-auth-callback"
+    "LoginCallbackUri": "https://localhost:5001/etsy/callback"
   },
   "ApiClient": {
     "Url": "https://openapi.etsy.com",
@@ -14,7 +14,7 @@
   },
   "EtsyOAuthOptions": {
     "Url": "https://openapi.etsy.com/v3/public/oauth",
-    "RedirectUri": "/etsy-auth-callback",
+    "RedirectUri": "/etsy/callback",
     "ClientID": "your-client-id-aka-keystring-from-user-secrets",
     "Scopes": [
       "listings_r",
@@ -28,6 +28,12 @@
     "Url": "https://my.sevdesk.de/api/v1",
     "ApiKey": "your-api-key-from-user-secrets"
 
+  },
+  "ServerOptions": {
+    "RootUri": "http://localhost",
+    "Port": 5001,
+    "CallbackUri": "/etsy/callback"
   }
+
 } 
 
