--- a/src/DevTKSS.MyManufacturerERP/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.json
@@ -5,15 +5,15 @@
   },
   "EtsyOAuth": {
     "LoginStartUri": "https://www.etsy.com/oauth/connect",
-    "LogoutStartUri": "https://my-manufacturer-erp.com/logout",
-    "LoginCallbackUri": "https://my-manufacturer-erp.com/callback",
+    "LogoutStartUri": "https://my-manufacturer-erp.com/etsy/logout",
+    "LoginCallbackUri": "https://my-manufacturer-erp.com/etsy/callback",
     "AccessTokenKey": "access_token",
     "RefreshTokenKey": "refresh_token",
-    "ExpiresInKey": "expires_in",
     "IdTokenKey": "user_id",
     "OtherTokenKeys": [
       {
-        "ShopIdTokenKey": "shop_id"
+        "ShopIdTokenKey": "shop_id",
+        "ExpirationTokenKey": "expires_in"
       }
     ]
   },
@@ -31,7 +31,7 @@
 
     "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
     "TokenEndpoint": "https://api.etsy.com/v3/public/oauth/token",
-    "RedirectUri": "https://my-manufacturer-erp.com/callback",
+    "RedirectUri": "https://my-manufacturer-erp.com/etsy/callback",
     "ClientId": "",
     "Scopes": [
       "listings_r",
