--- a/src/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -3,24 +3,29 @@
     "Title": "My Manufacturer ERP - Development",
     "Environment": "Development"
   },
-  "EtsyOAuth": {
-    "LoginStartUri": "https://www.etsy.com/oauth/connect",
-    "LoginCallbackUri": "https://localhost:5001/etsy/callback"
-  },
-  "ApiClient": {
-    "Url": "https://openapi.etsy.com",
-    "ApiKey": "your-api-key-or-keystring-from-user-secrets",
-    "UseNativeHandler": true
-  },
-  "EtsyOAuthOptions": {
-    "Url": "https://openapi.etsy.com/v3/public/oauth",
-    "RedirectUri": "/etsy/callback",
-    "ClientID": "your-client-id-aka-keystring-from-user-secrets",
+  "OAuth": {
+    "Url": "https://openapi.etsy.com/v3/",
+    "UseNativeHandler": true,
+    "AccessToken": "",
+    "RefreshToken": "",
+    "IdToken": "",
+    "EndpointOptions": {
+      "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
+      "TokenEndpoint": "/public/oauth/token",
+      "UserInfoEndpoint": "/public/users/me",
+      "RedirectUri": "https://localhost:5001/etsy/callback"
+    },
+    "ClientId": "your-keystring-from-user-secrets",
     "Scopes": [
       "listings_r",
       "listings_w",
       "shops_r",
       "shops_w"
+    ],
+    "OtherParameters": [
+      {
+        "ShopIdTokenKey": "shop_id"
+      }
     ]
   },
   "SevdeskApiKeyClient": {
@@ -34,6 +39,5 @@
     "Port": 5001,
     "CallbackUri": "/etsy/callback"
   }
-
 } 
 
