--- a/src/DevTKSS.MyManufacturerERP/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.json
@@ -1,43 +1,68 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "%TEMP%/Logs/log.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "DevTKSS.MyManufacturerERP"
+    }
+  },
   "AppConfig": {
     "Title": "My Manufacturer ERP",
     "Environment": "Production"
   },
-  "EtsyOAuth": {
-    "LoginStartUri": "https://www.etsy.com/oauth/connect",
-    "LogoutStartUri": "https://my-manufacturer-erp.com/etsy/logout",
-    "LoginCallbackUri": "https://my-manufacturer-erp.com/etsy/callback",
-    "AccessTokenKey": "access_token",
-    "RefreshTokenKey": "refresh_token",
-    "IdTokenKey": "user_id",
-    "OtherTokenKeys": [
-      {
-        "ShopIdTokenKey": "shop_id",
-        "ExpirationTokenKey": "expires_in"
-      }
-    ]
-  },
-  "LocalizationConfiguration": {
-    "Cultures": [
-      "es",
-      "fr",
-      "pt-BR",
-      "en"
-    ]
-  },
-  "EtsyOAuthOptions": {
+  "OAuth": {
     "Url": "https://openapi.etsy.com",
     "UseNativeHandler": true,
 
-    "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
-    "TokenEndpoint": "https://api.etsy.com/v3/public/oauth/token",
-    "RedirectUri": "https://my-manufacturer-erp.com/etsy/callback",
+    "AccessToken": "",
+    "RefreshToken": "",
+    "IdToken": "",
+    "EndpointOptions": {
+      "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
+      "TokenEndpoint": "/v3/public/oauth/token",
+      "UserInfoEndpoint": "/v3/public/users/me",
+      "RedirectUri": "https://my-manufacturer-erp.com/etsy/callback"
+    },
     "ClientId": "",
     "Scopes": [
       "listings_r",
       "listings_w",
       "shops_r",
       "shops_w"
+    ],
+    "OtherParameters": [
+      {
+        "ShopIdTokenKey": "shop_id"
+      }
     ]
+  },
+  "LocalizationConfiguration": {
+    "Cultures": [
+      "de",
+      "es",
+      "fr",
+      "pt-BR",
+      "en"
+    ]
+  },
+ 
+  "ServerOptions": {
+    "RootUri": "https://my-manufacturer-erp",
+    "Port": 5001,
+    "CallbackUri": "/etsy/callback"
   }
 }
