chore: try integrate to HostBuilder and IAuthenticationBuilder
BUG: uno extensions AccessorLevels are making it impossible to write clean and working pulling in the required things like TokenCache without having to write ALL again they did already

--- a/src/DevTKSS.Extensions.OAuth/DevTKSS.Extensions.OAuth.csproj
+++ b/src/DevTKSS.Extensions.OAuth/DevTKSS.Extensions.OAuth.csproj
@@ -7,7 +7,8 @@
     <UnoFeatures>
       Configuration;
       Authentication;
-      LoggingSerilog;
+      HttpRefit;
+      Logging;
       SkiaRenderer;
     </UnoFeatures>
   </PropertyGroup>
@@ -16,7 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
     <PackageReference Include="FluentValidation" />
-    <PackageReference Include="Yllibed.HttpServer"/>
+    <PackageReference Include="Yllibed.HttpServer" />
   </ItemGroup>
 
 </Project>
