--- a/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
+++ b/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
@@ -61,16 +61,8 @@
     <ProjectReference Include="..\DevTKSS.Extensions.OAuth\DevTKSS.Extensions.OAuth.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Page Update="Presentation\WebViewBrowserPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <PackageReference Include="Uno.Extensions.Validation.Fluent"/>
   </ItemGroup>
-  <ItemGroup>
-    <Page Update="Presentation\WebViewBrowserWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-
   <!--<ItemGroup>
     <ProjectReference Include="..\Temp.Extensibility.SystemAuthBrokerServer\Temp.Extensibility.DesktopAuthBroker.csproj" />
   </ItemGroup>-->
