--- a/src/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -6,27 +6,36 @@
   "OAuth": {
     "Url": "https://openapi.etsy.com/v3/",
     "UseNativeHandler": true,
-    "AccessToken": "",
-    "RefreshToken": "",
-    "IdToken": "",
-    "EndpointOptions": {
-      "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
-      "TokenEndpoint": "/public/oauth/token",
-      "UserInfoEndpoint": "/public/users/me",
-      "RedirectUri": "https://localhost:5001/etsy/callback"
+    "TokenCacheOptions": {
+      "AccessTokenKey": "AccessToken",
+      "RefreshTokenKey": "RefreshToken",
+      "IdTokenKey": "IdToken"
     },
-    "ClientId": "your-keystring-from-user-secrets",
-    "Scopes": [
-      "listings_r",
-      "listings_w",
-      "shops_r",
-      "shops_w"
-    ],
-    "OtherParameters": [
-      {
-        "ShopIdTokenKey": "shop_id"
-      }
-    ]
+    "OAuthClientOptions": {
+      "ClientId": "your-keystring-from-user-secrets",
+      "EndpointOptions": {
+        "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
+        "TokenEndpoint": "/public/oauth/token",
+        "UserInfoEndpoint": "/public/users/me"
+      },
+      "CallbackUri": "https://localhost:5001/etsy/callback",
+      "Scopes": [
+        "listings_r",
+        "listings_w",
+        "shops_r",
+        "shops_w"
+      ]
+    },
+    "UriTokenOptions": {
+      "AccessTokenKey": "access_token",
+      "RefreshTokenKey": "refresh_token",
+      "IdTokenKey": "client_id",
+      "OtherTokenKeys": [
+        {
+          "ShopIdTokenKey": "shop_id"
+        }
+      ]
+    }
   },
   "SevdeskApiKeyClient": {
     "UseNativeHandler": true,
@@ -35,9 +44,11 @@
 
   },
   "ServerOptions": {
-    "RootUri": "http://localhost",
-    "Port": 5001,
-    "CallbackUri": "/etsy/callback"
+    "BindAddres4": "127.0.0.1",
+    "BindAddres6": "::1",
+    "Hostname4": "localhost",
+    "Hostname6": "localhost",
+    "Port": 5001
   }
 } 
 
