chore: Try to register the oAuth as own provider
BUG: Fails to register, no Providers registred, failing on Sequence contains no Elements.

--- a/src/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -11,20 +11,20 @@
       "RefreshTokenKey": "RefreshToken",
       "IdTokenKey": "IdToken"
     },
-    "OAuthClientOptions": {
-      "ClientId": "your-keystring-from-user-secrets",
-      "EndpointOptions": {
-        "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
-        "TokenEndpoint": "/public/oauth/token",
-        "UserInfoEndpoint": "/public/users/me"
-      },
-      "CallbackUri": "https://localhost:5001/etsy/callback",
+    "ClientOptions": {
+      "CallbackUri": "http://localhost:5001/etsy/callback",
+      "ClientID": "your-keystring-from-user-secrets",
       "Scopes": [
         "listings_r",
         "listings_w",
         "shops_r",
         "shops_w"
-      ]
+      ],
+      "EndpointOptions": {
+        "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
+        "TokenEndpoint": "/public/oauth/token",
+        "UserInfoEndpoint": "/public/users/me"
+      }
     },
     "UriTokenOptions": {
       "AccessTokenKey": "access_token",
