--- a/src/DevTKSS.MyManufacturerERP/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.json
@@ -25,30 +25,38 @@
     "Environment": "Production"
   },
   "OAuth": {
-    "Url": "https://openapi.etsy.com",
+    "Url": "https://openapi.etsy.com/v3/",
     "UseNativeHandler": true,
-
-    "AccessToken": "",
-    "RefreshToken": "",
-    "IdToken": "",
-    "EndpointOptions": {
-      "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
-      "TokenEndpoint": "/v3/public/oauth/token",
-      "UserInfoEndpoint": "/v3/public/users/me",
-      "RedirectUri": "https://my-manufacturer-erp.com/etsy/callback"
+    "TokenCacheOptions": {
+      "AccessTokenKey": "AccessToken",
+      "RefreshTokenKey": "RefreshToken",
+      "IdTokenKey": "IdToken"
     },
-    "ClientId": "",
-    "Scopes": [
-      "listings_r",
-      "listings_w",
-      "shops_r",
-      "shops_w"
-    ],
-    "OtherParameters": [
-      {
-        "ShopIdTokenKey": "shop_id"
-      }
-    ]
+    "ClientOptions": {
+      "ClientID": "",
+      "EndpointOptions": {
+        "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
+        "TokenEndpoint": "/public/oauth/token",
+        "UserInfoEndpoint": "/public/users/me"
+      },
+      "CallbackUri": "http://mymanufacturererp/etsy/callback",
+      "Scopes": [
+        "listings_r",
+        "listings_w",
+        "shops_r",
+        "shops_w"
+      ]
+    },
+    "UriTokenOptions": {
+      "AccessTokenKey": "access_token",
+      "RefreshTokenKey": "refresh_token",
+      "IdTokenKey": "client_id",
+      "OtherTokenKeys": [
+        {
+          "ShopIdTokenKey": "shop_id"
+        }
+      ]
+    }
   },
   "LocalizationConfiguration": {
     "Cultures": [
@@ -59,7 +67,7 @@
       "en"
     ]
   },
- 
+
   "ServerOptions": {
     "RootUri": "https://my-manufacturer-erp",
     "Port": 5001,
