--- a/src/DevTKSS.Extensions.OAuth.Validation/DevTKSS.Extensions.OAuth.Validation.csproj
+++ b/src/DevTKSS.Extensions.OAuth.Validation/DevTKSS.Extensions.OAuth.Validation.csproj
@@ -1,8 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFrameworks>$(DefaultTargetFramework)</TargetFrameworks>
     <RootNamespace>DevTKSS.Extensions.OAuth.Validation</RootNamespace>
     <AssemblyName>DevTKSS.Extensions.OAuth.Validation</AssemblyName>
   </PropertyGroup>
