--- a/src/Tests/DevTKSS.MyManufacturerERP.UITests/DevTKSS.MyManufacturerERP.UITests.csproj
+++ b/src/Tests/DevTKSS.MyManufacturerERP.UITests/DevTKSS.MyManufacturerERP.UITests.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>$(DefaultTargetFramework)</TargetFrameworks>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
-    <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Uno.UITest.Helpers" />
