--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,2 +1,6 @@
 <Project>
+  <!-- See https://aka.ms/dotnet/msbuild/customize for more details on customizing your build -->
+
+  <Import Project="$(MSBuildThisFileDirectory)Mapster.Build.targets"
+          Condition="Exists('$(MSBuildThisFileDirectory)Mapster.Build.targets')" />
 </Project>
