--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -35,5 +35,13 @@
     <PackageReference Update="GitHubActionsTestLogger"
                       PrivateAssets="all"
                       IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    
+    <PackageReference Update="Microsoft.EntityFrameworkCore.Tools"
+                      PrivateAssets="all"
+                      IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+  </ItemGroup>
+
+  <ItemGroup Label="Mapster Generated Files Pattern">
+    <MapsterGenerated Include="$(MSBuildProjectDirectory)" Condition="Exists('$(BaseIntermediateOutputPath)mapster')" />
   </ItemGroup>
 </Project>
