--- a/src/Extensions/OAuth.Validation/DevTKSS.Extensions.OAuth.Validation.csproj
+++ b/src/Extensions/OAuth.Validation/DevTKSS.Extensions.OAuth.Validation.csproj
@@ -10,6 +10,6 @@
     <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Extensions\OAuth\DevTKSS.Extensions.OAuth.csproj" />
+    <ProjectReference Include="..\OAuth\DevTKSS.Extensions.OAuth.csproj" />
   </ItemGroup>
 </Project>
