test: update tfm and remove from slnf because of SourceGenerator Issue from Uno

--- a/src/Tests/DevTKSS.MyManufacturerERP.UITests/DevTKSS.MyManufacturerERP.UITests.csproj
+++ b/src/Tests/DevTKSS.MyManufacturerERP.UITests/DevTKSS.MyManufacturerERP.UITests.csproj
@@ -11,10 +11,7 @@
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Uno.UITest.Helpers" />
     <PackageReference Include="Xamarin.UITest" />
-    <PackageReference Include="GitHubActionsTestLogger">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="GitHubActionsTestLogger"/>
   </ItemGroup>
 
   <ItemGroup>
