--- a/src/Tests/DevTKSS.MyManufacturerERP.xUnitTests/DevTKSS.MyManufacturerERP.xUnitTests.csproj
+++ b/src/Tests/DevTKSS.MyManufacturerERP.xUnitTests/DevTKSS.MyManufacturerERP.xUnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>$(DefaultTargetFramework)</TargetFrameworks>
@@ -7,14 +7,15 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Shouldly" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="xunit.v3" />
-        <PackageReference Include="xunit.runner.visualstudio" />
+  <ItemGroup>
+    <PackageReference Include="Shouldly" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="xunit.v3" />
+    <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\..\DevTKSS.MyManufacturerERP\DevTKSS.MyManufacturerERP.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\DevTKSS.MyManufacturerERP\DevTKSS.MyManufacturerERP.csproj" />
+  </ItemGroup>
+
 </Project>
