--- a/src/WebApi/WebApi/WebApi.csproj
+++ b/src/WebApi/WebApi/WebApi.csproj
@@ -1,20 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <TargetFrameworks>$(DefaultTargetFramework)</TargetFrameworks>
     <RootNamespace>DevTKSS.MyManufacturerERP.WebApi</RootNamespace>
     <AssemblyName>DevTKSS.MyManufacturerERP.WebApi</AssemblyName>
-    <TargetFramework>net9.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <UserSecretsId>73d0e72f-3b9d-4ea9-bc0e-ca05efc5cd26</UserSecretsId>
+    <UserSecretsId>$(MyManufacturerERPUserSecretsId)</UserSecretsId>
     <OpenApiGenerateDocuments>true</OpenApiGenerateDocuments>
+    <MapsterEnabled>true</MapsterEnabled>
+    <MapsterPath>$(ProjectDir)**\mapster\**\*.g.cs</MapsterPath>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
  
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" />
-    <PackageReference Include="AutoMapper" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" />
+    <PackageReference Include="Mediator.Abstractions" />
+    <PackageReference Include="Mediator.SourceGenerator" />
   </ItemGroup>
   <ItemGroup Label="EntityFramework">
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
@@ -30,11 +32,7 @@
 
   <ItemGroup Label="OpenApi">
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
-    <PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="Microsoft.Extensions.ApiDescription.Server" />
     <PackageReference Include="Scalar.AspNetCore" />
     <PackageReference Include="Scalar.AspNetCore.Microsoft" />
   </ItemGroup>
@@ -43,5 +41,20 @@
    <Content Include="..\AppData\*.json" CopyToOutputDirectory="PreserveNewest" LinkBase="AppData" />
     <ProjectReference Include="..\Application\Application.csproj"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <!-- Mapster for mapping -->
+    <PackageReference Include="Mapster" />
+    <PackageReference Include="Mapster.DependencyInjection" />
+    <PackageReference Include="Mapster.EFCore" />
+    <PackageReference Include="Mapster.Async" />
+    <PackageReference Include="Mapster.Immutable" />
+  </ItemGroup>
+  
+  <ItemGroup Label="Include Mapster Generated Files" Condition="'$(MapsterEnabled)' == 'true' and Exists('$(BaseIntermediateOutputPath)mapster')">
+    <Compile Remove="$(MapsterPath)" />
+    <None Include="$(MapsterPath)">
+      <Link>mapster-generated/$(RecursiveDir)%(Filename)%(Extension)</Link>
+      <Visible>true</Visible>
+    </None>
+  </ItemGroup>
  </Project>
