chore: Migrate to mapper, remove obsolete settings

--- a/src/DevTKSS.MyManufacturerERP.WasmServer/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP.WasmServer/appsettings.json
@@ -37,12 +37,9 @@
       "CallbackPath": "/sevdesk-auth-callback" // unknown as you will most likly not need it. if you dont have entrance to your token check out their Reference: https://api.sevdesk.de/#section/Authentication-and-Authorization
     },
     "Etsy": {
-      "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
-      "TokenEndpoint": "https://openapi.etsy.com/v3/public/oauth/token",
-      "UserInformationEndpoint": "https://openapi.etsy.com/v3/application/users/me",
       "ClientId": "", // TODO: Use e.g. Azure KeyVault Storage to store ClientId in production
       "ClientSecret": "", // TODO: Use e.g. Azure KeyVault Storage to store ClientSecret in production
-      "Scope": "shops_r%20email_r", // TODO: Insert Production scope here, e.g. "address_r billing_r cart_r email_r listings_r profile_r shops_r transactions_r"
+      "Scope": [ "shops_r","email_r" ], // TODO: Insert Production scope here, e.g. "address_r billing_r cart_r email_r listings_r profile_r shops_r transactions_r"
       "CallbackPath": "/etsy-callback", // TODO: Set CallbackPath in Etsy configuration of your App: https://www.etsy.com/developers/your-apps
       "UsePkce": true
     }
