--- a/src/DevTKSS.MyManufacturerERP.WasmServer/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP.WasmServer/appsettings.development.json
@@ -8,9 +8,10 @@
   "AllowedHosts": "*",
   "Authentication": {
     "Etsy": {
-      "ClientId": "WELL_KNOWN_ETSY_KEYSTRING_STORED_IN_USER_SECRETS", // TODO: Use `dotnet user-secrets` to store client id in development
-      "ClientSecret": "WELL_KNOWN__ETSY_SHARED_SECRET_STORED_IN_USER_SECRETS", // TODO: Use `dotnet user-secrets` to store client secret in development
-      "Scope": "address_r billing_r cart_r email_r listings_r profile_r shops_r transactions_r"
+      "ClientId": "WELL_KNOWN_ETSY_KEYSTRING_STORED_IN_USER_SECRETS",
+      "ClientSecret": "WELL_KNOWN__ETSY_SHARED_SECRET_STORED_IN_USER_SECRETS",
+      "Scope": "address_r billing_r cart_r email_r listings_r profile_r shops_r transactions_r",
+      "CallbackPath": "/etsy-signin"
     },
     "Sevdesk": { // Sevdesk v1 api I am still set to might not be available as they introduced a Breaking Change that made their product not usable properly for many Customers
       "ClientId": "WELL_KNOWN_SEVDESK_CLIENT_ID_STORED_IN_USER_SECRETS",
