chore: re-rename back to Directory.Build.targets as the sourcing setup did not work with this seperate file.

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,6 +1,69 @@
 <Project>
-  <!-- See https://aka.ms/dotnet/msbuild/customize for more details on customizing your build -->
+  <!--
+    Mapster integration targets.
+  
+    Mapster integration targets.
+    Usage:
+      1) Run one-time setup (executes dotnet tool restore in repo root):
+         msbuild -t:MapsterSetup
+      2) Enable per-project automatic Mapster generation by adding to the project's .csproj:
+         <PropertyGroup>
+           <MapsterEnabled>true</MapsterEnabled>
+         </PropertyGroup>
+    3) Optionally, specify the Mapster generated files path pattern e.g. if you want to see the files in the project directory:
+        <ProjectProperties>
+          <MapsterPath>$(ProjectDir)**\mapster\**\*.g.cs</MapsterPath>
+        </ProjectProperties>
 
-  <Import Project="$(MSBuildThisFileDirectory)Mapster.Build.targets"
-          Condition="Exists('$(MSBuildThisFileDirectory)Mapster.Build.targets')" />
+        And include the following ItemGroup to expose the generated files in the project:
+        <ItemGroup Label="Include Mapster Generated Files" Condition="'$(MapsterEnabled)' == 'true' and Exists('$(BaseIntermediateOutputPath)mapster')">
+          <Compile Remove="$(MapsterPath)" />
+          <None Include="$(MapsterPath)">
+            <Link>mapster-generated/$(RecursiveDir)%(Filename)%(Extension)</Link>
+            <Visible>true</Visible>
+          </None>
+        </ItemGroup>
+
+    4) Build the project. If MapsterEnabled is true and the project includes a net9.0 target framework, Mapster code generation will run after build.
+       as the code generated is not runtime-specific, it will be generated once per project, not per TFM.
+       This way you can also use the generated files in multiple TFMs e.g. net10.0 while dotnet-mapster only supports up to net9.0 currently.
+         -->
+  <Target Name="MapsterSetup">
+    <!-- Run tool restore in repository root (parent of /src). Only report on failure to avoid noise. -->
+    <Exec WorkingDirectory="$(MSBuildThisFileDirectory).." Command="dotnet tool restore" Condition="Exists('$(MSBuildThisFileDirectory)..\.config\dotnet-tools.json')" ContinueOnError="true">
+      <Output TaskParameter="ExitCode" PropertyName="MapsterSetupExitCode" />
+    </Exec>
+    <Error Text="MapsterSetup: dotnet tool restore failed (exit code $(MapsterSetupExitCode))."
+           Condition="Exists('$(MSBuildThisFileDirectory)..\.config\dotnet-tools.json') and '$(MapsterSetupExitCode)' != '' and '$(MapsterSetupExitCode)' != '0'" />
+  </Target>
+
+  <!-- Run Mapster only when project targets net9.0 (either current TFM or TargetFrameworks contains net9.0). -->
+  <Target Name="Mapster" AfterTargets="AfterBuild"
+          Condition="'$(MapsterEnabled)' == 'true' and ( '$(TargetFramework)' == 'net9.0' or $([System.String]::Copy('$(TargetFrameworks)').Contains('net9.0')) == 'True' )" >
+
+    <Message Importance="high" Text="Mapster: starting code generation for $(MSBuildProjectName)..." />
+
+    <!-- Generate into a non-runtime-specific obj/mapster folder to allow reuse across TFMs -->
+    <Exec WorkingDirectory="$(MSBuildProjectDirectory)"
+          Command="dotnet mapster model -a &quot;$(TargetPath)&quot; -o &quot;$(BaseIntermediateOutputPath)mapster&quot; -r -N"
+          ContinueOnError="false" />
+
+    <Exec WorkingDirectory="$(MSBuildProjectDirectory)"
+          Command="dotnet mapster extension -a &quot;$(TargetPath)&quot; -o &quot;$(BaseIntermediateOutputPath)mapster&quot; -N"
+          ContinueOnError="false" />
+
+    <Exec WorkingDirectory="$(MSBuildProjectDirectory)"
+          Command="dotnet mapster mapper -a &quot;$(TargetPath)&quot; -o &quot;$(BaseIntermediateOutputPath)mapster&quot; -N"
+          ContinueOnError="false" />
+    
+    <Message Importance="high" Text="Mapster: finished generation for $(MSBuildProjectName)." />
+  </Target>
+  <ItemGroup>
+    <GeneratedMappings Include="**\\mapster\\*.g.cs" />
+  </ItemGroup>
+
+  <Target Name="CleanGenerated" BeforeTargets="Clean">
+    <Message Importance="low" Text="CleanGenerated: removing mapster generated files..." Condition="Exists('$(BaseIntermediateOutputPath)mapster')" />
+    <Delete Files="@(GeneratedMappings)" ContinueOnError="false" Condition="Exists('$(BaseIntermediateOutputPath)mapster')" />
+  </Target>
 </Project>
